<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_measure_75dp"
        android:background="@drawable/navigation_background" >

        <Button
            android:id="@+id/title_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/return_back_btn"
            android:drawableLeft="@anim/xml_back"
            android:paddingBottom="@dimen/common_measure_24dp"
            android:paddingRight="@dimen/common_measure_60dp"
            android:paddingTop="@dimen/common_measure_24dp"
            android:textColor="#ffffff"
            android:textSize="@dimen/common_measure_26sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_title_layout_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/common_measure_14dp"
            android:contentDescription="@string/title_layout_iv_title_layout_left"
            android:orientation="horizontal"
            android:visibility="gone"
             >

            <ImageView
                android:id="@+id/iv_title_layout_left"
                android:layout_width="@dimen/common_measure_24dp"
                android:layout_height="@dimen/common_measure_40dp"
                android:background="@anim/xml_back"
                android:contentDescription="@string/title_layout_iv_title_layout_left"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_titile_layout_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_measure_10dp"
                android:text="个人收藏"
                android:textColor="#ffffff"
                android:textSize="@dimen/common_measure_26sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title_layout_navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="简介"
            android:textColor="#ffffff"
            android:textSize="@dimen/common_measure_32sp" />

        <LinearLayout
            android:id="@+id/ll_title_layout_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_title_layout_right"
                android:layout_width="@dimen/common_measure_50dp"
                android:layout_height="@dimen/common_measure_50dp"
                android:layout_marginRight="@dimen/common_measure_18dp"
                android:background="@anim/xml_add"
                android:contentDescription="@string/title_layout_iv_title_layout_right"
                android:visibility="gone"
                 />

            <TextView
                android:id="@+id/tv_title_layout_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/common_measure_14dp"
                android:padding="@dimen/common_measure_14dp"
                android:text="编辑"
                android:textColor="#ffffff"
                android:textSize="@dimen/common_measure_26sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>