<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_measure_76dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_25dp"
            android:text="姓名"
            android:textColor="#4fb5ff"
            android:textSize="@dimen/common_measure_26dp" />

        <EditText
            android:id="@+id/et_contacts_add_name"
            android:layout_width="@dimen/common_measure_260dp"
            android:layout_height="@dimen/common_measure_50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_64dp"
            android:background="@null"
            android:contentDescription="@string/introduction_edit_et_introduction_name"
            android:textColor="#363636"
            android:textSize="@dimen/common_measure_26sp" />
    </LinearLayout>

    <include layout="@layout/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_measure_76dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_25dp"
            android:text="手机"
            android:textColor="#4fb5ff"
            android:textSize="@dimen/common_measure_26sp" />

        <EditText
            android:id="@+id/et_contacts_add_phone"
            android:layout_width="@dimen/common_measure_260dp"
            android:layout_height="@dimen/common_measure_50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_64dp"
            android:background="@null"
            android:contentDescription="@string/introduction_edit_et_introduction_phoneNum"
            android:textColor="#363636"
            android:textSize="@dimen/common_measure_26sp" />
    </LinearLayout>

    <include layout="@layout/divider" />
    <LinearLayout
        android:id="@+id/ll_contacts_add_phone_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_measure_76dp"
        android:visibility="gone"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_25dp"
            android:text="住宅"
            android:textColor="#4fb5ff"
            android:textSize="@dimen/common_measure_26sp" />

        <EditText
            android:id="@+id/et_contacts_add_phone_home"
            android:layout_width="@dimen/common_measure_260dp"
            android:layout_height="@dimen/common_measure_50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_64dp"
            android:background="@null"
            android:contentDescription="@string/introduction_edit_et_introduction_phoneNum_home"
            android:textColor="#363636"
            android:textSize="@dimen/common_measure_26sp" />
    </LinearLayout>
    <include layout="@layout/divider" />

    <LinearLayout
        android:id="@+id/ll_contacts_add_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_measure_76dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/common_measure_34dp"
            android:layout_height="@dimen/common_measure_34dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_25dp"
            android:background="@drawable/common_add" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_20dp"
            android:text="添加电话"
            android:textColor="#4fb5ff"
            android:textSize="@dimen/common_measure_26sp" />
    </LinearLayout>

    <include layout="@layout/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_measure_76dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_25dp"
            android:text="邮件"
            android:textColor="#4fb5ff"
            android:textSize="@dimen/common_measure_26sp" />

        <EditText
            android:id="@+id/et_contacts_add_email"
            android:layout_width="@dimen/common_measure_260dp"
            android:layout_height="@dimen/common_measure_50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_64dp"
            android:background="@null"
            android:contentDescription="@string/introduction_edit_et_introduction_email"
            android:textColor="#363636"
            android:textSize="@dimen/common_measure_26sp" />
    </LinearLayout>

    <include layout="@layout/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_measure_76dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/common_measure_34dp"
            android:layout_height="@dimen/common_measure_34dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_25dp"
            android:background="@drawable/common_add" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_20dp"
            android:text="添加电子邮箱"
            android:textColor="#4fb5ff"
            android:textSize="@dimen/common_measure_26sp" />
    </LinearLayout>

    <include layout="@layout/divider" />

</LinearLayout>