<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_measure_76dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_25dp"
            android:text="姓名"
            android:textColor="#4fb5ff"
            android:textSize="@dimen/common_measure_26dp" />

        <EditText
            android:id="@+id/et_introduction_name"
            android:layout_width="@dimen/common_measure_260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_64dp"
            android:background="@null"
            android:textColor="#363636"
            android:textSize="@dimen/common_measure_26dp" 
            android:contentDescription="@string/introduction_edit_et_introduction_name"
            />
    </LinearLayout>
    <include layout="@layout/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_measure_76dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_25dp"
            android:text="移动"
            android:textColor="#4fb5ff"
            android:textSize="@dimen/common_measure_26sp" />

        <EditText
            android:id="@+id/et_introduction_phoneNum"
            android:layout_width="@dimen/common_measure_260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:inputType="phone"
            android:layout_marginLeft="@dimen/common_measure_64dp"
            android:background="@null"
            android:textColor="#363636"
            android:textSize="@dimen/common_measure_26sp"
            android:contentDescription="@string/introduction_edit_et_introduction_phoneNum"
             />
    </LinearLayout>
    <include layout="@layout/divider" />

    <LinearLayout
        android:id="@+id/ll_introdution_edit_phone_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_measure_76dp"
        android:visibility="gone"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_25dp"
            android:text="住宅"
            android:textColor="#4fb5ff"
            android:textSize="@dimen/common_measure_26sp" />

        <EditText
            android:id="@+id/et_introduction_phoneNum_home"
            android:inputType="phone"
            android:layout_width="@dimen/common_measure_260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_64dp"
            android:background="@null"
            android:textColor="#363636"
            android:textSize="@dimen/common_measure_26sp"
            android:contentDescription="@string/introduction_edit_et_introduction_phoneNum"
             />
    </LinearLayout>
    <include layout="@layout/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_measure_76dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_25dp"
            android:text="邮箱"
            android:textColor="#4fb5ff"
            android:textSize="@dimen/common_measure_26sp" />

        <EditText
            android:id="@+id/et_introduction_email"
            android:layout_width="@dimen/common_measure_260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/common_measure_64dp"
            android:background="@null"
            android:textColor="#363636"
            android:textSize="@dimen/common_measure_26sp"
            android:contentDescription="@string/introduction_edit_et_introduction_email" />
        
    </LinearLayout>
    <include layout="@layout/divider" />


</LinearLayout>